--- a/app/eleve/pages/main/main.html
+++ b/app/eleve/pages/main/main.html
@@ -12,6 +12,98 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
+                        Devoirs à rendre
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-md-3 col-sm-6 hero-feature">
+                                <div class="thumbnail">
+                                    <img src="http://placehold.it/800x500" alt="">
+                                    <div class="caption">
+                                        <h3>Nom du cours</h3>
+                                        <p>Devoir à rendre avant le 10/10/2016</p>
+                                        <p>
+                                            <button class="btn btn-primary" ui-sref="eleve.rendre_copie">
+                                                Faire le devoir
+                                            </button>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 col-sm-6 hero-feature">
+                                <div class="thumbnail">
+                                    <img src="http://placehold.it/800x500" alt="">
+                                    <div class="caption">
+                                        <h3>Nom du cours</h3>
+                                        <p>3 devoirs à rendre avant le 10/10/2016</p>
+                                        <p>
+                                            <button class="btn btn-primary" ui-sref="eleve.rendre_copie">
+                                                Faire le devoir
+                                            </button>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 col-sm-6 hero-feature">
+                                <div class="thumbnail">
+                                    <img src="http://placehold.it/800x500" alt="">
+                                    <div class="caption">
+                                        <h3>Nom du cours</h3>
+                                        <p>Devoir à rendre avant le 10/10/2016</p>
+                                        <p>
+                                            <button class="btn btn-primary" ui-sref="eleve.rendre_copie">
+                                                Faire le devoir
+                                            </button>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 col-sm-6 hero-feature">
+                                <div class="thumbnail">
+                                    <img src="http://placehold.it/800x500" alt="">
+                                    <div class="caption">
+                                        <h3>Nom du cours</h3>
+                                        <p>Devoir à rendre avant le 10/10/2016</p>
+                                        <p>
+                                            <button class="btn btn-primary"ui-sref="eleve.rendre_copie">
+                                                Faire le devoir
+                                            </button>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 col-sm-6 hero-feature">
+                                <div class="thumbnail">
+                                    <img src="http://placehold.it/800x500" alt="">
+                                    <div class="caption">
+                                        <h3>Nom du cours</h3>
+                                        <p>Devoir à rendre avant le 10/10/2016</p>
+                                        <p>
+                                            <button class="btn btn-primary" ui-sref="eleve.rendre_copie">
+                                                Faire le devoir
+                                            </button>
+
+                                        </div>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+                <!-- /.panel -->
+
+
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
                         Évaluations en cours
                     </div>
                     <!-- /.panel-heading -->
@@ -29,11 +121,11 @@
                                                 <span class="">Liste</span>
                                                 <span class="caret"></span>
                                             </button>
-                                            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                                                <li><a href="">1</a></li>
-                                                <li><a href="">2</a></li>
-                                                <li><a href="">3</a></li>
-                                                <li><a href="">4</a></li>
+                                            <ul class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenu1">
+                                                <li><a ui-sref="eleve.evaluations.corriger">1</a></li>
+                                                <li><a ui-sref="eleve.evaluations.corriger">2</a></li>
+                                                <li><a ui-sref="eleve.evaluations.corriger">3</a></li>
+                                                <li><a ui-sref="eleve.evaluations.corriger">4</a></li>
                                             </ul>
                                         </div>
                                         </p>
@@ -53,11 +145,11 @@
                                                 <span class="">Liste</span>
                                                 <span class="caret"></span>
                                             </button>
-                                            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-                                                <li><a href="">1</a></li>
-                                                <li><a href="">2</a></li>
-                                                <li><a href="">3</a></li>
-                                                <li><a href="">4</a></li>
+                                            <ul class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenu1">
+                                                <li><a ui-sref="eleve.evaluations.corriger">1</a></li>
+                                                <li><a ui-sref="eleve.evaluations.corriger">2</a></li>
+                                                <li><a ui-sref="eleve.evaluations.corriger">3</a></li>
+                                                <li><a ui-sref="eleve.evaluations.corriger">4</a></li>
                                             </ul>
                                         </div>
                                         </p>
