--- a/app/enseignant/pages/evaluations/evaluation-create.html
+++ b/app/enseignant/pages/evaluations/evaluation-create.html
@@ -99,7 +99,7 @@
 
                     </div>
                 </div>
-                <input type="submit" class="btn btn-primary pull-right" ui-sref=".etape2" placeholder="Créer une évaluation" />
+                <input type="submit" class="btn btn-primary pull-right" ui-sref=".etape2" />
                 <!-- /.panel-body -->
             </div>
 
