--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 
     <!--------------------------------- SCRIPTS ---------------------------------------------->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="//cdn.ckeditor.com/4.5.11/standard/ckeditor.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
+    <script src='app/bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
+    <script src='app/bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
+    <script src='app/bower_components/textAngular/dist/textAngular.min.js'></script>
     <script src="app/bower_components/angular-resource/angular-resource.js"></script>
     <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="app/bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
     <script src="app/bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="app/Admin/dist/js/sb-admin-2.js"></script>
-    <script src="app/bower_components/angular-resource/angular-resource.js"></script>
     <script src="app/bower_components/pdfjs-dist/build/pdf.js"></script>
     <script src="app/bower_components/angular-pdf/dist/angular-pdf.js"></script>
 
