--- a/app/eleve/pages/evaluations/correction.html
+++ b/app/eleve/pages/evaluations/correction.html
@@ -11,7 +11,7 @@
         <!-- modified -->
         <div class="col-lg-12">
             <div ng-repeat="section in copie.sections">
-                <div class="panel panel-default">
+                <div class="panel {{panelColor[$id%4]}}">
                     <div class="panel-heading">
                         {{section.titre}}:&nbsp;&nbsp;
                         /{{section.points}}
@@ -28,11 +28,10 @@
                         <div>
                             <a target="_blank" href="{{copie.fichier}}">Réponse de l'élève</a>
                         </div>
-                        <br><br>
+                        <br>
                         <h4>Correction</h4>
                         <div class="container" data-target="#{{section.id}}">
                             <ul class="nav nav-pills">
-                                <li class="active"><a  data-target="#{{section.id}}" data-toggle="tab">Home</a></li>
                                 <li ng-repeat="critere in section.criteres">
                                     <a ng-click="setTab(critere.id)" data-target="#{{section.id*100+critere.id}}" data-toggle="tab">
                                         Critère n°{{critere.ordre}}
@@ -58,13 +57,10 @@
                                 </li>
                             </ul>
                         </div>
-
-                    </div>
                     </div>
                 </div>
             </div>
-            <input type="submit" class="btn btn-primary pull-right" ui-sref="eleve"/>
-            <!-- /.panel-body -->
         </div>
+        <input type="submit" class="btn btn-primary pull-right" ui-sref="eleve"/>
     </div>
 </div>
