--- a/app/enseignant/pages/evaluations/evaluation-create.html
+++ b/app/enseignant/pages/evaluations/evaluation-create.html
@@ -162,16 +162,41 @@
                                     <div class="table-responsive">
                                         <table id="table" class="table table-striped table-bordered table-hover">
                                             <thead>
-                                            <tr><th class="index">#</th><th>Type</th></th><th>Description</th><th>Points</th><th>Precision</th></tr>
+                                            <tr><th></th><th class="index">#</th><th>Type</th></tr>
                                             </thead>
                                             <tbody>
-                                            <tr ng-repeat="critere in section.criteres">
+                                            <tr ng-repeat-start="critere in section.criteres">
+                                                <td>
+                                                    <button ng-if="critere.expanded" ng-click="critere.expanded = false">&Hat;</button>
+                                                    <button ng-if="!critere.expanded" ng-click="critere.expanded = true">+</button>
+                                                </td>
                                                 <td class="index">{{critere.ordre}}</td>
                                                 <td>{{critere.type}}</td>
-                                                <td>{{critere.description}}</td>
-                                                <td>{{critere.points}}</td>
-                                                <td>{{critere.precision}}</td>
+
                                             </tr>
+
+                                            <tr ng-if="critere.expanded" ng-repeat-end="">
+                                                <td colspan="99">
+                                                    <p>Description: {{critere.description}}</p>
+                                                    <p ng-show="critere.type!='commentaire'">Nombre de points: {{critere.points}}</p>
+                                                    <p ng-show="critere.type=='jugement'">Précision : {{critere.precision}}</p>
+                                                    <p>
+                                                    <div class="panel panel-default" ng-controller="HighChartsController">
+                                                        <div class="panel-heading">
+                                                            Trapèze des notes
+                                                        </div>
+                                                        <!-- /.panel-heading -->
+                                                        <div class="panel-body">
+
+                                                            <div id="container" style="height: 400px"></div>
+                                                            <div id="drag"></div>
+                                                            <div id="drop"></div>
+                                                        </div>
+                                                    </div>
+                                                    </p>
+                                                </td>
+                                            </tr>
+
                                             </tbody>
                                         </table>
                                     </div>
@@ -343,10 +368,6 @@
                     </div>
                 </div>
 
-            </div>
-            <!-- /.row -->
-        </div>
-
 
         <div id="menu03" class="tab-pane fade" ng-controller="HighChartsController">
 
@@ -357,18 +378,6 @@
                 <br><br>
 
                 <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Trapèze des notes
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-
-                            <div id="container" style="height: 400px"></div>
-                            <div id="drag"></div>
-                            <div id="drop"></div>
-                        </div>
-                    </div>
 
                     <script>
                         $('input[type="checkbox"]').on('change', function() {
@@ -431,3 +440,5 @@
         </div>
     </div>
 </div>
+        </div>
+    </div>
