--- a/app/enseignant/pages/evaluations/evaluation-create2.html
+++ b/app/enseignant/pages/evaluations/evaluation-create2.html
@@ -41,15 +41,25 @@
                             <div class="table-responsive">
                             <table id="table" class="table table-striped table-bordered table-hover">
                                 <thead>
-                                <tr><th class="index">#</th><th>Type</th></th><th>Description</th><th>Points</th><th>Precision</th></tr>
+                                <tr><th></th><th class="index">#</th><th>Type</th></tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="critere in section.criteres">
+                                    <tr ng-repeat-start="critere in section.criteres">
+                                        <td>
+                                            <button ng-if="critere.expanded" ng-click="critere.expanded = false">&Hat;</button>
+                                            <button ng-if="!critere.expanded" ng-click="critere.expanded = true">+</button>
+                                        </td>
                                         <td class="index">{{critere.ordre}}</td>
                                         <td>{{critere.type}}</td>
-                                        <td>{{critere.description}}</td>
-                                        <td>{{critere.points}}</td>
-                                        <td>{{critere.precision}}</td>
+
+                                    </tr>
+                                    <tr ng-if="critere.expanded" ng-repeat-end="">
+                                        <td colspan="99">
+                                            <p>Description: {{critere.description}}</p>
+                                            <p ng-show="critere.type!='commentaire'">Nombre de points: {{critere.points}}</p>
+                                            <p ng-show="critere.type=='jugement'">Précision : {{critere.precision}}</p>
+
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
