--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="//cdn.ckeditor.com/4.5.11/standard/ckeditor.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
+    <link rel="stylesheet" type="text/css" href="app/bower_components/angularjs-slider/dist/rzslider.css"/>
+    <script src="app/bower_components/angularjs-slider/dist/rzslider.min.js"></script>
     <script src='app/bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
     <script src='app/bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
     <script src='app/bower_components/textAngular/dist/textAngular.min.js'></script>
