Adel: eleve/evaluations

--- a/app/Admin/pages/cours/cours.html
+++ b/app/Admin/pages/cours/cours.html
@@ -106,7 +106,7 @@
                         <tr ng-if="cours.expanded" ng-repeat-end="">
                             <td></td>
                             <td colspan="99">
-                                <p class=""><a href="">description: {{cours.description}}</a></p>
+                                <p class="">description: {{cours.description}}</p>
                                 <p class="hidden-xl hidden-lg hidden-md"><a href="">Section: {{cours.section}}</a></p>
                                 <p class="hidden-xl hidden-lg hidden-md"><a href="">Référence: {{cours.reference}}</a></p>
 
