--- a/app/enseignant/pages/evaluations/evaluation-create.html
+++ b/app/enseignant/pages/evaluations/evaluation-create.html
@@ -160,7 +160,8 @@
                                     <br><br>
                                     <h4>Critères d'évaluation:</h4>
                                     <div class="table-responsive">
-                                        <table id="table" class="table table-striped table-bordered table-hover">
+                                        {{n}}
+                                        <table id="table0" class="table table-striped table-bordered table-hover">
                                             <thead>
                                             <tr><th></th><th class="index">#</th><th>Type</th></tr>
                                             </thead>
@@ -181,7 +182,7 @@
                                                     <p ng-show="critere.type!='commentaire'">Nombre de points: {{critere.points}}</p>
                                                     <p ng-show="critere.type=='jugement'">Précision : {{critere.precision}}</p>
                                                     <p>
-                                                    <div class="panel panel-default" ng-controller="HighChartsController">
+                                                    <div class="panel panel-default"  ng-controller="HighChartsController">
                                                         <div class="panel-heading">
                                                             Trapèze des notes
                                                         </div>
@@ -217,7 +218,7 @@
                                                     });
                                                 };
 
-                                        $("#table tbody").sortable({
+                                        $("#table0 tbody").sortable({
                                             helper: fixHelperModified,
                                             stop: updateIndex
                                         }).disableSelection();
@@ -367,9 +368,9 @@
                         </div>
                     </div>
                 </div>
-
-
-        <div id="menu03" class="tab-pane fade" ng-controller="HighChartsController">
+            </div>
+        </div>
+        <div id="menu03" class="tab-pane fade">
 
 
 
@@ -434,9 +435,9 @@
                         </div>
                     </div>
                 </div>
+                <input type="submit" class="btn btn-primary pull-right" ui-sref="enseignant.createEvaluation.etape5"
+                       placeholder="Créer l'évaluation" />
             </div>
-            <input type="submit" class="btn btn-primary pull-right" ui-sref="enseignant.createEvaluation.etape5" placeholder="Créer l'évaluation" />
-
         </div>
     </div>
 </div>
