--- a/app/eleve/pages/copie.html
+++ b/app/eleve/pages/copie.html
@@ -50,9 +50,8 @@
                 </div>
                     <!-- /.panel-body -->
             </div>
-            <input type="submit" class="btn btn-primary pull-right" />
-
         </div>
+        <button type="submit" class="btn btn-primary pull-right">Terminer l'évaluation</button>
     </div>
 </div>
 <!-- /#page-wrapper -->
