--- a/app/eleve/pages/evaluations/correction.html
+++ b/app/eleve/pages/evaluations/correction.html
@@ -70,8 +70,7 @@
                                         </div>
                                     </li>
                                 </ul>
-                            </div>
-                        </div>
+                        <button type="submit" class="btn-primary pull-right" ng-click="saveEval(copie.id, section.id)">Enregistrer</button>
                     </div>
                 </div>
             </div>
