--- a/app/enseignant/pages/enseignant.html
+++ b/app/enseignant/pages/enseignant.html
@@ -252,7 +252,7 @@
                         <a class="navbarEnseignantText" ui-sref="enseignant"><i class="fa fa-home fa-fw"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a class="navbarEnseignantText" ui-sref="enseignant.cours"><i class="fa fa-book fa-fw"></i> Cours</a>
+                        <a class="navbarEnseignantText" ui-sref="enseignant.mesCours"><i class="fa fa-book fa-fw"></i> Cours</a>
                     </li>
                     <li>
                         <a class="navbarEnseignantText" ui-sref="enseignant.evaluations"><i class="fa fa-pencil fa-fw"></i> Évaluations</a>
