--- a/app/enseignant/pages/evaluations/evaluation-create.html
+++ b/app/enseignant/pages/evaluations/evaluation-create.html
@@ -162,17 +162,19 @@
                                     <div class="table-responsive">
                                         <table id="table" class="table table-striped table-bordered table-hover">
                                             <thead>
-                                            <tr><th></th><th class="index">#</th><th>Type</th></tr>
+                                            <tr><th></th><th>Critère</th><th></th></tr>
                                             </thead>
                                             <tbody>
-                                            <tr ng-repeat-start="critere in section.criteres">
+                                            <tr ng-repeat-start="critere in section.criteres | orderBy : 'ordre'">
                                                 <td>
-                                                    <button ng-if="critere.expanded" ng-click="critere.expanded = false">&Hat;</button>
-                                                    <button ng-if="!critere.expanded" ng-click="critere.expanded = true">+</button>
+                                                    <button class="btn btn-primary btn-circle-micro" ng-if="critere.expanded" ng-click="critere.expanded = false"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+                                                    <button class="btn btn-primary btn-circle-micro" ng-if="!critere.expanded" ng-click="critere.expanded = true"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
                                                 </td>
-                                                <td class="index">{{critere.ordre}}</td>
-                                                <td>{{critere.type}}</td>
-
+                                                <td>Critère n°{{critere.ordre}}: {{critere.type}}</td>
+                                                <td>
+                                                    <a class="btn btn-success btn-circle-nano pull-right" ng-click="sectionUp(critere.ordre, section.criteres)"><i class="fa fa-angle-up"></i></a>
+                                                    <a class="btn btn-success btn-circle-nano pull-right" ng-click="sectionDown(critere.ordre, section.criteres)"><i class="fa fa-angle-down"></i></a>
+                                                </td>
                                             </tr>
 
                                             <tr ng-if="critere.expanded" ng-repeat-end="">
@@ -187,41 +189,20 @@
                                                         </div>
                                                         <!-- /.panel-heading -->
                                                         <div class="panel-body">
+                                                            <a ng-init="chart(critere.id)"></a>
 
                                                             <div id="container" style="height: 400px"></div>
                                                             <div id="drag"></div>
                                                             <div id="drop"></div>
+                                                            <button type="submit" class="btn btn-primary pull-right" ng-click="save(critere.id)">Enregister</button>
                                                         </div>
                                                     </div>
                                                     </p>
                                                 </td>
                                             </tr>
-
                                             </tbody>
                                         </table>
                                     </div>
-
-
-                                    <script>
-                                        var fixHelperModified = function(e, tr) {
-                                                    var $originals = tr.children();
-                                                    var $helper = tr.clone();
-                                                    $helper.children().each(function(index) {
-                                                        $(this).width($originals.eq(index).width())
-                                                    });
-                                                    return $helper;
-                                                },
-                                                updateIndex = function(e, ui) {
-                                                    $('td.index', ui.item.parent()).each(function (i) {
-                                                        $(this).html(i + 1);
-                                                    });
-                                                };
-
-                                        $("#table tbody").sortable({
-                                            helper: fixHelperModified,
-                                            stop: updateIndex
-                                        }).disableSelection();
-                                    </script>
                                     <br><br>
                                     <button class="btn btn-primary" data-toggle="modal" data-target="#{{section.id}}">Ajouter un critère d'évaluation</button>
 
@@ -284,8 +265,6 @@
                                             </div>
                                         </div>
                                     </div>
-
-
                                 </div>
                             </div>
                         </div>
@@ -294,7 +273,7 @@
                     </div>
 
                 </div>
-                <input type="submit" class="btn btn-primary pull-right" ui-sref="enseignant.createEvaluation.etape3" placeholder="Créer l'évaluation" />
+                <button type="submit" class="btn btn-primary pull-right" ng-click="create_eval()">Créer l'évaluation</button>
 
                 <!-- Modal content-->
                 <div id="myModal" class="modal fade" role="dialog">
@@ -360,6 +339,32 @@
                                 Contenu de l'évaluation :
                                 <input type="file" ng-model="newSection.enonce"/>
                             </div>
+                            <br>
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    Mode de calcul de la note
+                                </div>
+                                <div class="panel-body">
+
+                                    <input type="checkbox" name="calcul" id="moyenne">&nbsp;Moyenne des notes&nbsp;&nbsp;</input>
+                                    <br>
+                                    <input type="checkbox" name="calcul" id="mediane">&nbsp;Médiane des notes&nbsp;&nbsp;</input>
+                                    <br><br>
+                                    <input type="checkbox" name="calculPondere" id="ponderees">
+                                    Evaluations pondérées
+                                    <span class="glyphicon glyphicon-info-sign" data-toggle="popover" title="Evaluations pondérées" data-content="Poids selon la fiabilité de chaque évaluation."></span>&nbsp;&nbsp;&nbsp;
+                                    </input>
+                                    <br>
+                                    <input type="checkbox" name="calculCalibre" id="calibrees">
+                                    Evaluations calibrées
+                                    <span class="glyphicon glyphicon-info-sign" data-toggle="popover" title="Evaluations calibrées" data-content="Modulées selon le biais estimé de l’évaluateur (sa « note de jugement » sur des devoirs précédents)."></span>&nbsp;&nbsp;</input>
+                                    <br>
+                                    <input type="checkbox" name="calculAuto" id="autoEval" ng-show="evaluation.autoEval!=0">
+                                    Auto-évaluation prise en compte&nbsp;&nbsp;&nbsp;&nbsp;
+                                    </input>
+
+                                </div>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-default" data-dismiss="modal" ng-click="addSection()">Ajouter</button>
@@ -367,11 +372,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
 
 
-        <div id="menu03" class="tab-pane fade" ng-controller="HighChartsController">
-
-
+        <div id="menu03" class="tab-pane fade">
 
             <title>Mode de calcul d'évaluation</title>
             <div class="row">
@@ -402,43 +407,18 @@
                         </div>
                     </div>
 
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Mode de calcul de la note
-                        </div>
-                        <div class="panel-body">
-
-                            <input type="checkbox" name="calcul" id="moyenne">&nbsp;Moyenne des notes&nbsp;&nbsp;</input>
-                            <input type="checkbox" name="calcul" id="mediane">&nbsp;Médiane des notes&nbsp;&nbsp;</input>
-                            <input type="checkbox" name="calculPondere" id="ponderees">&nbsp;Evaluations pondérées&nbsp;&nbsp;</input>
-                            <input type="checkbox" name="calculCalibre" id="calibrees">&nbsp;Evaluations calibrées&nbsp;&nbsp;</input>
-                            <input type="checkbox" name="calculAuto" id="autoEval" ng-show="evaluation.autoEval!=0">&nbsp;Auto-évaluation prise en compte&nbsp;&nbsp;</input>
-                        </div>
-                    </div>
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Mode de calcul de la fiabilité
-                        </div>
-                        <div class="panel-body">
-
-                        </div>
-                    </div>
-
-                    <div class="panel panel-default" ng-show="evaluation.attributionSupervisee">
+                    <div class="panel panel-default" ng-show="evaluation.mode_attribution=='supervise'">
                         <div class="panel-heading">
                             Superviser l'attribution des copies
                         </div>
                         <div class="panel-body">
-                            <button class="btn btn-primary center-block" data-toggle="modal" data-target="#myModal">Choisir l'attribution des copies</button>
+                            <button class="btn btn-primary center-block" data-toggle="modal" data-target="#modalSuperviser">Choisir l'attribution des copies</button>
                         </div>
                     </div>
+                    <input type="submit" class="btn btn-primary pull-right" placeholder="Créer l'évaluation" />
                 </div>
             </div>
-            <input type="submit" class="btn btn-primary pull-right" ui-sref="enseignant.createEvaluation.etape5" placeholder="Créer l'évaluation" />
 
         </div>
     </div>
 </div>
-        </div>
-    </div>
