--- a/app/Admin/pages/eleves/eleves_add.html
+++ b/app/Admin/pages/eleves/eleves_add.html
@@ -11,13 +11,13 @@
             <div class="form-group">
                 <label for="nom" class="col-sm-2 control-label">Nom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="newEleve.Nom" class="form-control" id="nom" placeholder="Nom"/>
+                    <input type="text" ng-model="newEleve.nom" class="form-control" id="nom" placeholder="Nom"/>
                 </div>
             </div>
             <div class="form-group">
                 <label for="prenom" class="col-sm-2 control-label">Prenom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="newEleve.Prenom" class="form-control" id="prenom" placeholder="Prenom"/>
+                    <input type="text" ng-model="newEleve.prenom" class="form-control" id="prenom" placeholder="Prenom"/>
                 </div>
             </div>
 
