--- a/app/eleve/pages/evaluations/correction.html
+++ b/app/eleve/pages/evaluations/correction.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Rendre une copie</h1>
+            <h1 class="page-header">Corriger une copie</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
