--- a/app/enseignant/pages/main/main.html
+++ b/app/enseignant/pages/main/main.html
@@ -2,60 +2,11 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Dashboard</h1>
+                <h1 class="page-header">Tableau de bord</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
-        <!-- /.row -->
-        <div class="row">
 
-
-            <!-- modified -->
-            <div class="col-lg-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Gestion des cours
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <div>
-                            <a ui-sref="enseignant.mesCours">Voir mes cours</a><br>
-                            <a ui-sref="enseignant.cours">Voir la liste des cours</a><br>
-                        </div>
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.panel -->
-            </div>
-
-            <!-- /.col-lg-6 -->
-            <div class="col-lg-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Gestion des évaluations
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <div>
-                            <a ui-sref="enseignant.mesEvaluations">Voir mes évaluations</a><br>
-                            <a ui-sref="enseignant.createEvaluation">Ajouter une évaluation</a><br>
-                            <a href="#">Statistiques</a><br>
-                        </div>
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.panel -->
-            </div>
-
-
-            <!-- /modified -->
-
-
-
-
-
-
-        </div>
         <!-- /.row -->
 
     </div>
