--- a/app/Admin/pages/eleves/eleves_add.html
+++ b/app/Admin/pages/eleves/eleves_add.html
@@ -14,54 +14,69 @@
                     <input type="text" ng-model="newEleve.nom" class="form-control" id="nom" placeholder="Nom"/>
                 </div>
             </div>
+        </div>
+    </div>
+        <div class="row">
+            <div class="col-lg-12">
             <div class="form-group">
                 <label for="prenom" class="col-sm-2 control-label">Prenom</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="newEleve.prenom" class="form-control" id="prenom" placeholder="Prenom"/>
                 </div>
             </div>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-lg-12">
             <div class="form-group">
                 <label for="email" class="col-sm-2 control-label">Adresse Mail</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="newEleve.email" class="form-control" id="email" placeholder="email"/>
                 </div>
+                </div>
             </div>
+            </div>
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <label for="username" class="col-sm-2 control-label">Username</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="newEleve.username" class="form-control" id="username" placeholder="username"/>
                 </div>
             </div>
+        </div>
+    </div>
 
             <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES cours -->
-
+        <div class="row">
+            <div class="col-lg-12">
             <div class="form-group">
                 <label for="coursList" class="col-sm-2 control-label"> Cours Associés</label>
                     <div class="col-sm-10">
-
                         <select multiple class="selectpicker" id="coursList" data-live-search="true" ng-model="newEleve.cours" data-size="5">
-
-                            <option ng-repeat="cours in cours">{{cours.nom}}</option>
+                            <option data-ng-repeat="c in cours">{{c.nom}}</option>
                         </select>
-                      </div>
+                    </div>
                 </div>
+                </div>
+            </div>
 
 
             <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES groupes -->
-
-            <label for="groupesList" class="col-sm-2 control-label"> Groupes</label>
-            <div class="col-sm-10">
-
-                <select multiple class="selectpicker" id="groupesList" data-live-search="true" ng-model="newEleve.Groupes" data-size="5">
-
-                    <option ng-repeat="groupe in groupes">{{groupe}}</option>
+        <div class="row">
+            <div class="col-lg-12">
+                <label for="groupesList" class="col-sm-2 control-label"> Groupes</label>
+                <div class="col-sm-10">
+                    <select multiple class="selectpicker" id="groupesList" data-live-search="true" ng-model="newEleve.Groupes" data-size="5">
+                        <option ng-repeat="groupe in groupes">{{groupe}}</option>
                 </select>
             </div>
-
         </div>
-    </div>
+        </div>
+
     <div class="row">
+        <div class="col-lg-12">
         <div class="form-group pull-right">
             <div class="col-sm-offset-2 col-sm-10">
                 <input type="submit" ng-click="addEleve()" class="btn btn-primary" value="Ajouter Elève"/>
@@ -69,3 +84,4 @@
         </div>
     </div>
 </div>
+    </div>
