--- a/app/enseignant/pages/enseignant.html
+++ b/app/enseignant/pages/enseignant.html
@@ -53,27 +53,27 @@
             <div class="sidebar-nav navbar-collapse">
 
                 <ul class="nav" id="side-menu">
-                        <img src="{{enseignantCo.avatar}}" class="img-rounded" alt="Robert" width="200" height="190">
-                        <h3>{{enseignantCo.nom}} {{enseignantCo.prenom}} </h3>
+
+                   <li class="hidden-xs disabled">
+                       <a href="#">
+                       <img src="{{enseignantCo.avatar}}" class="img-rounded" alt="Robert" width="200" height="190">
+                        <h3>{{enseignantCo.nom}} {{enseignantCo.prenom}}</h3>
                         <h5>{{enseignantCo.email}}</h5>
+                           </a>
+                        </li>
+
                         <!-- /input-group -->
                     <li>
-                        <a class="navbarEnseignantText" ui-sref="enseignant"><i class="fa fa-home fa-fw"></i> Dashboard</a>
+                        <a class="navbarEnseignantText" ui-sref="enseignant"><i class="fa fa-home fa-fw"></i> Tableau de bord</a>
                     </li>
                     <li>
-                        <a class="navbarEnseignantText" ui-sref="enseignant.cours"><i class="fa fa-book fa-fw"></i> Cours</a>
+                        <a class="navbarEnseignantText" ui-sref="enseignant.cours"><i class="fa fa-book fa-fw"></i> Mes Cours</a>
                     </li>
                     <li>
-                        <a class="navbarEnseignantText" ui-sref="enseignant.evaluations"><i class="fa fa-pencil fa-fw"></i> Évaluations</a>
+                        <a class="navbarEnseignantText" ui-sref="enseignant.evaluations"><i class="fa fa-pencil fa-fw"></i> Editer une évaluation</a>
                     </li>
                     <li>
                         <a class="navbarEnseignantText" ui-sref="enseignant.createEvaluation"><i class="fa fa-check-square fa-fw"></i> Créer une évaluation</a>
-                    </li>
-                    <li>
-                        <a class="navbarEnseignantText" ui-sref="enseignant.diagrammeFiabilite"><i class="fa fa-check-square fa-fw"></i> Diagramme de Fiabilité</a>
-                    </li>
-                    <li>
-                        <a class="navbarEnseignantText" href="forms.html"><i class="fa fa-cog fa-fw"></i> Paramètres</a>
                     </li>
                 </ul>
             </div>
