Eleves admin preque fonctionnelle

--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
 
 <footer>
     <hr>
-    Ceci n'est pas un footer <a href="app/myPivotTable/pivot.html">pivot</a>
+    <div class="row">
+    <div class="col-md-2 col-md-offset-1"><p> By DTY</p></div>
+    <div class="col-md-2 pull-right"><a href="https://moodle.supelec.fr">Moodle</a></div>
+</div>
+
 </footer>
 </body>
 
