--- a/app/Admin/pages/eleves/eleve_update.html
+++ b/app/Admin/pages/eleves/eleve_update.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{Eleve.Nom}} {{Eleve.Prenom}}</h1>
+            <h1 class="page-header">{{Eleve.nom}} {{Eleve.prenom}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -11,30 +11,47 @@
             <div class="form-group">
                 <label for="nom" class="col-sm-2 control-label">Nom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.Nom" class="form-control" id="nom" value="Bonjour"/>
+                    <input type="text" ng-model="Eleve.nom" class="form-control" id="nom" value={{eleve.nom}}"/>
                 </div>
             </div>
+            </div>
+        </div>
+
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <label for="prenom" class="col-sm-2 control-label">Prenom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="Eleve.Prenom" class="form-control" id="prenom" value={{Eleve.Prenom}}/>
+                    <input type="text" ng-model="Eleve.prenom" class="form-control" id="prenom" value={{Eleve.prenom}}/>
                 </div>
             </div>
+            </div>
+        </div>
 
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <label for="email" class="col-sm-2 control-label">Adresse-Mail</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="Eleve.email" class="form-control" id="email" value="{{Eleve.email}}"/>
                 </div>
             </div>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <label for="username" class="col-sm-2 control-label">Pseudo</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="Eleve.username" class="form-control" id="username" value="{{Eleve.username}}"/>
                 </div>
             </div>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <label for="coursList" class="col-sm-2 control-label"> Cours Associés</label>
                 <div class="col-sm-10">
@@ -45,10 +62,14 @@
                     </select>
                 </div>
             </div>
+        </div>
+    </div>
 
 
             <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES groupes -->
 
+    <div class="row">
+        <div class="col-lg-12">
             <label for="groupesList" class="col-sm-2 control-label"> Groupes</label>
             <div class="col-sm-10">
 
@@ -57,9 +78,13 @@
                     <option ng-repeat="groupe in groupes">{{groupe}}</option>
                 </select>
             </div>
+            </div>
+        </div>
 
+    <hr>
 
-
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <input type="submit" ng-click="updateEleves()" class="btn btn-primary" value="Modifier Elève"/>
@@ -68,3 +93,4 @@
         </div>
     </div>
 </div>
+
