--- a/app/eleve/pages/evaluations/correction.html
+++ b/app/eleve/pages/evaluations/correction.html
@@ -11,7 +11,7 @@
         <!-- modified -->
         <div class="col-lg-12">
             <div ng-repeat="section in copie.sections">
-                <div class="panel {{panelColor[$id%4]}}">
+                <div class="panel">
                     <div class="panel-heading">
                         {{section.titre}}:&nbsp;&nbsp;
                         /{{section.points}}
