--- a/app/eleve/pages/main/main.html
+++ b/app/eleve/pages/main/main.html
@@ -19,10 +19,9 @@
                         <div class="row">
                             <div class="col-md-3 col-sm-6 hero-feature">
                                 <div class="thumbnail">
-                                    <img src="http://placehold.it/800x500" alt="">
                                     <div class="caption">
-                                        <h3>Nom du cours</h3>
-                                        <p>Devoir à rendre avant le 10/10/2016</p>
+                                        <h3>Evaluation : {{evaluation.nom}}</h3>
+                                        <p>Devoir à rendre avant le {{date}}</p>
                                         <p>
                                             <button class="btn btn-primary" ui-sref="eleve.rendre_copie">
                                                 Faire le devoir
