--- a/app/eleve/pages/cours/cours.html
+++ b/app/eleve/pages/cours/cours.html
@@ -11,95 +11,27 @@
         <!-- /.row -->
 
         <!-- Project One -->
-        <div class="row">
+        <div class="row" ng-repeat="cours in MesCours">
+            <hr>
             <div class="col-md-4">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x200" alt="">
+                    <img ng-src="{{cours.image}}" alt="">
                 </a>
             </div>
             <div class="col-md-8">
-                <h3>Champs et propagation</h3>
-                <h4>Électromagnétisme</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-                <a class="btn btn-primary" href="#">Voir le cours <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <h3>{{cours.nom}}</h3>
+                <h4>{{cours.categorie.nom}}</h4>
+                <p><span ng-bind="cours.description | limitTo:200"></span>
+                    <span ng-if="cours.description.length > 200">...</span></p>
+                <a class="btn btn-primary" ng-click="goToCours(cours.id)">Voir le cours <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
+            <hr>
         </div>
         <!-- /.row -->
 
-        <hr>
-
-        <!-- Project Two -->
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x200" alt="">
-                </a>
-            </div>
-            <div class="col-md-8">
-                <h3>Microéconomie</h3>
-                <h4>Économie</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-                <a class="btn btn-primary" href="#">Voir le cours <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
         <!-- /.row -->
 
-        <hr>
 
-        <!-- Project Three -->
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x200" alt="">
-                </a>
-            </div>
-            <div class="col-md-8">
-                <h3>Project Three</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Four -->
-        <div class="row">
-
-            <div class="col-md-4">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x200" alt="">
-                </a>
-            </div>
-            <div class="col-md-8">
-                <h3>Project Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x200" alt="">
-                </a>
-            </div>
-            <div class="col-md-8">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
 
         <!-- Pagination -->
         <div class="row text-center">
